--- a/carbrand.ipynb
+++ b/carbrand.ipynb
@@ -1056,6 +1056,353 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save it as a h5 file\n",
+    "from tensorflow.keras.models import load_model\n",
+    "model.save('model_resnet50.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-05 17:11:17.662778: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
+      "\t [[{{node Placeholder/_0}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/2 [==============================] - 2s 546ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.47715430e-02, 2.33556330e-02, 4.62555140e-01, 4.79317665e-01],\n",
+       "       [6.80852681e-03, 5.21910144e-03, 3.85170169e-02, 9.49455261e-01],\n",
+       "       [1.25605285e-01, 2.07189634e-01, 2.67640620e-01, 3.99564505e-01],\n",
+       "       [6.34510294e-02, 2.76880357e-02, 2.73347627e-02, 8.81526172e-01],\n",
+       "       [2.21441075e-01, 1.62593201e-01, 1.44608706e-01, 4.71357048e-01],\n",
+       "       [2.44634939e-05, 1.75663095e-04, 2.63825431e-03, 9.97161567e-01],\n",
+       "       [5.06718829e-02, 3.83765697e-01, 8.00972953e-02, 4.85465020e-01],\n",
+       "       [4.88151424e-03, 4.26838454e-03, 4.00926359e-02, 9.50757325e-01],\n",
+       "       [8.29756483e-02, 3.41064744e-02, 1.17307603e-01, 7.65610218e-01],\n",
+       "       [2.38382831e-01, 1.15293428e-01, 5.00806808e-01, 1.45516917e-01],\n",
+       "       [3.76113430e-02, 7.12017119e-02, 7.85722136e-01, 1.05464906e-01],\n",
+       "       [6.05617821e-01, 1.45608122e-02, 1.44201621e-01, 2.35619769e-01],\n",
+       "       [1.62385087e-02, 4.99061309e-02, 8.83042067e-03, 9.25024867e-01],\n",
+       "       [7.52099574e-01, 5.98804280e-02, 5.28287217e-02, 1.35191232e-01],\n",
+       "       [6.66326471e-03, 2.67991424e-02, 1.04731292e-01, 8.61806333e-01],\n",
+       "       [1.05944928e-02, 3.76242310e-01, 3.22255969e-01, 2.90907264e-01],\n",
+       "       [2.28354454e-01, 1.59403190e-01, 5.08014083e-01, 1.04228273e-01],\n",
+       "       [7.01855682e-03, 2.18286052e-01, 3.01687270e-01, 4.73007977e-01],\n",
+       "       [1.31650784e-04, 2.20273100e-02, 9.77101862e-01, 7.39023497e-04],\n",
+       "       [3.48807037e-01, 8.81759543e-03, 1.75963845e-02, 6.24778986e-01],\n",
+       "       [3.37435282e-03, 2.93076169e-02, 1.02113513e-02, 9.57106590e-01],\n",
+       "       [2.59078778e-02, 4.78863835e-01, 4.48998451e-01, 4.62297462e-02],\n",
+       "       [1.11365736e-01, 1.97625294e-01, 4.69310820e-01, 2.21698150e-01],\n",
+       "       [6.87267542e-01, 8.59072134e-02, 1.22098714e-01, 1.04726449e-01],\n",
+       "       [2.10620072e-02, 4.69918162e-01, 6.09347969e-03, 5.02926469e-01],\n",
+       "       [6.57423437e-02, 9.02539417e-02, 6.58947527e-01, 1.85056135e-01],\n",
+       "       [6.54052138e-01, 2.14508288e-02, 1.59793526e-01, 1.64703563e-01],\n",
+       "       [4.43919562e-02, 9.59420949e-03, 1.57545701e-01, 7.88468122e-01],\n",
+       "       [8.00222993e-01, 5.06476592e-03, 8.57029185e-02, 1.09009445e-01],\n",
+       "       [8.82094681e-01, 4.16839117e-04, 7.74876848e-02, 4.00007218e-02],\n",
+       "       [2.27845609e-02, 3.10629816e-03, 1.08257875e-01, 8.65851223e-01],\n",
+       "       [4.86086875e-01, 3.95926721e-02, 4.54772830e-01, 1.95475072e-02],\n",
+       "       [6.66058660e-01, 8.94051716e-02, 6.88192546e-02, 1.75716847e-01],\n",
+       "       [4.00684088e-01, 2.14574561e-01, 2.94419557e-01, 9.03217345e-02],\n",
+       "       [6.76254407e-02, 4.11744565e-02, 3.67506653e-01, 5.23693442e-01],\n",
+       "       [1.67001802e-02, 2.61340052e-01, 6.86494946e-01, 3.54647040e-02],\n",
+       "       [3.92852500e-02, 8.71577621e-01, 2.08893437e-02, 6.82477728e-02],\n",
+       "       [1.54796362e-01, 4.89967138e-01, 1.66072249e-01, 1.89164251e-01],\n",
+       "       [6.80974424e-01, 3.09026781e-02, 1.83578119e-01, 1.04544654e-01],\n",
+       "       [1.03270151e-02, 2.78451703e-02, 1.67399630e-01, 7.94428170e-01],\n",
+       "       [2.17713311e-01, 1.14268571e-01, 3.02055359e-01, 3.65962744e-01],\n",
+       "       [1.71529967e-02, 4.80706334e-01, 8.08511153e-02, 4.21289593e-01],\n",
+       "       [6.12995178e-02, 1.17562480e-01, 2.64216065e-01, 5.56921959e-01],\n",
+       "       [3.19009423e-01, 2.05363072e-02, 2.05461606e-01, 4.54992622e-01],\n",
+       "       [3.04964446e-02, 2.27914215e-03, 2.87821800e-01, 6.79402649e-01],\n",
+       "       [8.95548403e-01, 4.56225537e-02, 3.36904787e-02, 2.51385961e-02]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "y_pred = np.argmax(y_pred, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 3, 3, 3, 3, 3, 3, 3, 2, 2, 0, 3, 0, 3, 1, 2, 3, 2, 3, 3, 1,\n",
+       "       2, 0, 3, 2, 0, 3, 0, 0, 3, 0, 0, 0, 3, 2, 1, 1, 0, 3, 3, 1, 3, 3,\n",
+       "       3, 0])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing import image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=load_model('model_resnet50.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img=image.load_img('Datasets/Test/Lamborghini/lamborghini42.jpg',target_size=(224,224))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        ...,\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.]],\n",
+       "\n",
+       "       [[255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        ...,\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.]],\n",
+       "\n",
+       "       [[255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        ...,\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        ...,\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.]],\n",
+       "\n",
+       "       [[255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        ...,\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.]],\n",
+       "\n",
+       "       [[255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        ...,\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.],\n",
+       "        [255., 255., 255.]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=image.img_to_array(img)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(224, 224, 3)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=x/255\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 224, 224, 3)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=np.expand_dims(x,axis=0)\n",
+    "img_data=preprocess_input(x)\n",
+    "img_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 1s 601ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.3448434e-08, 3.3162316e-06, 9.9593002e-01, 4.0666913e-03]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(img_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 86ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.argmax(model.predict(img_data), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a==2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
